# testMaGUI

./: .gitignore  CMakeLists.txt  ConfigFile.h  README.md  RenderWindowUISingleInheritance.cxx  RenderWindowUISingleInheritance.h  RenderWindowUISingleInheritance.ui  cudaKernels.cu  cudaKernels.cuh  imageImportDialog.ui  imageimportdialog.cpp  imageimportdialog.h  main.cxx  uMath.h  utils.h
